LittleParser.py
# Generated from /home/ubuntu/Little.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LittleParser ( Parser ):

    grammarFileName = "Little.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PROGRAM'", "'BEGIN'", "'END'", "'STRING'",
                     "':='", "';'", "'FLOAT'", "'INT'", "'VOID'", "','",
                     "'FUNCTION'", "'('", "')'", "'READ'", "'WRITE'", "'RETURN'",
                     "'+'", "'-'", "'*'", "'/'", "'IF'", "'ENDIF'", "'ELSE'",
                     "'<'", "'>'", "'='", "'!='", "'<='", "'>='", "'WHILE'",
                     "'ENDWHILE'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "KEYWORD", "IDENTIFIER", "INTLITERAL", "FLOATLITERAL",
                      "STRINGLITERAL", "COMMENT", "OPERATOR", "WS", "NL" ]

    RULE_prog = 0
    RULE_im = 1
    RULE_pgm_body = 2
    RULE_decl = 3
    RULE_string_decl = 4
    RULE_st = 5
    RULE_var_decl = 6
    RULE_var_type = 7
    RULE_any_type = 8
    RULE_id_list = 9
    RULE_id_tail = 10
    RULE_param_decl_list = 11
    RULE_param_decl = 12
    RULE_param_decl_tail = 13
    RULE_func_declarations = 14
    RULE_func_decl = 15
    RULE_func_body = 16
    RULE_stmt_list = 17
    RULE_stmt = 18
    RULE_base_stmt = 19
    RULE_assign_stmt = 20
    RULE_assign_expr = 21
    RULE_read_stmt = 22
    RULE_write_stmt = 23
    RULE_return_stmt = 24
    RULE_expr = 25
    RULE_expr_prefix = 26
    RULE_factor = 27
    RULE_factor_prefix = 28
    RULE_postfix_expr = 29
    RULE_call_expr = 30
    RULE_expr_list = 31
    RULE_expr_list_tail = 32
    RULE_primary = 33
    RULE_addop = 34
    RULE_mulop = 35
    RULE_if_stmt = 36
    RULE_else_part = 37
    RULE_cond = 38
    RULE_compop = 39
    RULE_while_stmt = 40

    ruleNames =  [ "prog", "im", "pgm_body", "decl", "string_decl", "st",
                   "var_decl", "var_type", "any_type", "id_list", "id_tail",
                   "param_decl_list", "param_decl", "param_decl_tail", "func_declarations",
                   "func_decl", "func_body", "stmt_list", "stmt", "base_stmt",
                   "assign_stmt", "assign_expr", "read_stmt", "write_stmt",
                   "return_stmt", "expr", "expr_prefix", "factor", "factor_prefix",
                   "postfix_expr", "call_expr", "expr_list", "expr_list_tail",
                   "primary", "addop", "mulop", "if_stmt", "else_part",
                   "cond", "compop", "while_stmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    KEYWORD=32
    IDENTIFIER=33
    INTLITERAL=34
    FLOATLITERAL=35
    STRINGLITERAL=36
    COMMENT=37
    OPERATOR=38
    WS=39
    NL=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def im(self):
            return self.getTypedRuleContext(LittleParser.ImContext,0)


        def pgm_body(self):
            return self.getTypedRuleContext(LittleParser.Pgm_bodyContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = LittleParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(LittleParser.T__0)
            self.state = 83
            self.im()
            self.state = 84
            self.match(LittleParser.T__1)
            self.state = 85
            self.pgm_body()
            self.state = 86
            self.match(LittleParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LittleParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return LittleParser.RULE_im

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIm" ):
                listener.enterIm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIm" ):
                listener.exitIm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIm" ):
                return visitor.visitIm(self)
            else:
                return visitor.visitChildren(self)




    def im(self):

        localctx = LittleParser.ImContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_im)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(LittleParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Pgm_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(LittleParser.DeclContext,0)


        def func_declarations(self):
            return self.getTypedRuleContext(LittleParser.Func_declarationsContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_pgm_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPgm_body" ):
                listener.enterPgm_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPgm_body" ):
                listener.exitPgm_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPgm_body" ):
                return visitor.visitPgm_body(self)
            else:
                return visitor.visitChildren(self)




    def pgm_body(self):

        localctx = LittleParser.Pgm_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pgm_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.decl()
            self.state = 91
            self.func_declarations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string_decl(self):
            return self.getTypedRuleContext(LittleParser.String_declContext,0)


        def decl(self):
            return self.getTypedRuleContext(LittleParser.DeclContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(LittleParser.Var_declContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = LittleParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.string_decl()
                self.state = 94
                self.decl()
                pass
            elif token in [LittleParser.T__6, LittleParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.var_decl()
                self.state = 97
                self.decl()
                pass
            elif token in [LittleParser.T__2, LittleParser.T__10, LittleParser.T__13, LittleParser.T__14, LittleParser.T__15, LittleParser.T__20, LittleParser.T__21, LittleParser.T__22, LittleParser.T__29, LittleParser.T__30, LittleParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class String_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def im(self):
            return self.getTypedRuleContext(LittleParser.ImContext,0)


        def st(self):
            return self.getTypedRuleContext(LittleParser.StContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_string_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_decl" ):
                listener.enterString_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_decl" ):
                listener.exitString_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString_decl" ):
                return visitor.visitString_decl(self)
            else:
                return visitor.visitChildren(self)




    def string_decl(self):

        localctx = LittleParser.String_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_string_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(LittleParser.T__3)
            self.state = 103
            self.im()
            self.state = 104
            self.match(LittleParser.T__4)
            self.state = 105
            self.st()
            self.state = 106
            self.match(LittleParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRINGLITERAL(self):
            return self.getToken(LittleParser.STRINGLITERAL, 0)

        def getRuleIndex(self):
            return LittleParser.RULE_st

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSt" ):
                listener.enterSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSt" ):
                listener.exitSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSt" ):
                return visitor.visitSt(self)
            else:
                return visitor.visitChildren(self)




    def st(self):

        localctx = LittleParser.StContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_st)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(LittleParser.STRINGLITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(LittleParser.Var_typeContext,0)


        def id_list(self):
            return self.getTypedRuleContext(LittleParser.Id_listContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = LittleParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.var_type()
            self.state = 111
            self.id_list()
            self.state = 112
            self.match(LittleParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LittleParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_type" ):
                return visitor.visitVar_type(self)
            else:
                return visitor.visitChildren(self)




    def var_type(self):

        localctx = LittleParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not(_la==LittleParser.T__6 or _la==LittleParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Any_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(LittleParser.Var_typeContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_any_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAny_type" ):
                listener.enterAny_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAny_type" ):
                listener.exitAny_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAny_type" ):
                return visitor.visitAny_type(self)
            else:
                return visitor.visitChildren(self)




    def any_type(self):

        localctx = LittleParser.Any_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_any_type)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleParser.T__6, LittleParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.var_type()
                pass
            elif token in [LittleParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(LittleParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def im(self):
            return self.getTypedRuleContext(LittleParser.ImContext,0)


        def id_tail(self):
            return self.getTypedRuleContext(LittleParser.Id_tailContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = LittleParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.im()
            self.state = 121
            self.id_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def im(self):
            return self.getTypedRuleContext(LittleParser.ImContext,0)


        def id_tail(self):
            return self.getTypedRuleContext(LittleParser.Id_tailContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_id_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_tail" ):
                listener.enterId_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_tail" ):
                listener.exitId_tail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_tail" ):
                return visitor.visitId_tail(self)
            else:
                return visitor.visitChildren(self)




    def id_tail(self):

        localctx = LittleParser.Id_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_id_tail)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(LittleParser.T__9)
                self.state = 124
                self.im()
                self.state = 125
                self.id_tail()
                pass
            elif token in [LittleParser.T__5, LittleParser.T__12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_decl_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(LittleParser.Param_declContext,0)


        def param_decl_tail(self):
            return self.getTypedRuleContext(LittleParser.Param_decl_tailContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_param_decl_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl_list" ):
                listener.enterParam_decl_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl_list" ):
                listener.exitParam_decl_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_decl_list" ):
                return visitor.visitParam_decl_list(self)
            else:
                return visitor.visitChildren(self)




    def param_decl_list(self):

        localctx = LittleParser.Param_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param_decl_list)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleParser.T__6, LittleParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.param_decl()
                self.state = 131
                self.param_decl_tail()
                pass
            elif token in [LittleParser.T__12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(LittleParser.Var_typeContext,0)


        def im(self):
            return self.getTypedRuleContext(LittleParser.ImContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_param_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl" ):
                listener.enterParam_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl" ):
                listener.exitParam_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_decl" ):
                return visitor.visitParam_decl(self)
            else:
                return visitor.visitChildren(self)




    def param_decl(self):

        localctx = LittleParser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.var_type()
            self.state = 137
            self.im()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_decl_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(LittleParser.Param_declContext,0)


        def param_decl_tail(self):
            return self.getTypedRuleContext(LittleParser.Param_decl_tailContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_param_decl_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl_tail" ):
                listener.enterParam_decl_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl_tail" ):
                listener.exitParam_decl_tail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_decl_tail" ):
                return visitor.visitParam_decl_tail(self)
            else:
                return visitor.visitChildren(self)




    def param_decl_tail(self):

        localctx = LittleParser.Param_decl_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param_decl_tail)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(LittleParser.T__9)
                self.state = 140
                self.param_decl()
                self.state = 141
                self.param_decl_tail()
                pass
            elif token in [LittleParser.T__12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(LittleParser.Func_declContext,0)


        def func_declarations(self):
            return self.getTypedRuleContext(LittleParser.Func_declarationsContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_func_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_declarations" ):
                listener.enterFunc_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_declarations" ):
                listener.exitFunc_declarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declarations" ):
                return visitor.visitFunc_declarations(self)
            else:
                return visitor.visitChildren(self)




    def func_declarations(self):

        localctx = LittleParser.Func_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_func_declarations)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleParser.T__10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.func_decl()
                self.state = 147
                self.func_declarations()
                pass
            elif token in [LittleParser.T__2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def any_type(self):
            return self.getTypedRuleContext(LittleParser.Any_typeContext,0)


        def im(self):
            return self.getTypedRuleContext(LittleParser.ImContext,0)


        def param_decl_list(self):
            return self.getTypedRuleContext(LittleParser.Param_decl_listContext,0)


        def func_body(self):
            return self.getTypedRuleContext(LittleParser.Func_bodyContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = LittleParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(LittleParser.T__10)
            self.state = 153
            self.any_type()
            self.state = 154
            self.im()
            self.state = 155
            self.match(LittleParser.T__11)
            self.state = 156
            self.param_decl_list()
            self.state = 157
            self.match(LittleParser.T__12)
            self.state = 158
            self.match(LittleParser.T__1)
            self.state = 159
            self.func_body()
            self.state = 160
            self.match(LittleParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(LittleParser.DeclContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(LittleParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_func_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_body" ):
                listener.enterFunc_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_body" ):
                listener.exitFunc_body(self)
